--- a/spec/support/fixtures/another_config.yml
+++ b/spec/support/fixtures/another_config.yml
@@ -2,4 +2,5 @@ cadun:
   logout_url: https://login.globo.com/Servlet/do/logout
   login_url: https://login.globo.com/login
   auth_url: autenticacao.globo.com
+  restclient_url: http://cadun-rest.globoi.com
   auth_port: 8080
