Provisioning fixed and working

--- a/spec/support/fixtures/config.yml
+++ b/spec/support/fixtures/config.yml
@@ -1,6 +1,5 @@
 cadun:
   logout_url: https://login.qa01.globoi.com/Servlet/do/logout
   login_url: https://login.qa01.globoi.com/login
-  auth_url: isp-authenticator.qa01.globoi.com
+  auth_url: http://isp-authenticator.qa01.globoi.com:8280
   restclient_url: http://cadun-rest.qa01.globoi.com
-  auth_port: 8280
