--- a/spec/support/fixtures/another_config.yml
+++ b/spec/support/fixtures/another_config.yml
@@ -1,6 +1,5 @@
 cadun:
   logout_url: https://login.globo.com/Servlet/do/logout
   login_url: https://login.globo.com/login
-  auth_url: autenticacao.globo.com
+  auth_url: http://autenticacao.globo.com:8080
   restclient_url: http://cadun-rest.globoi.com
-  auth_port: 8080
